# codiff

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  todo.md
.github/workflows/: release.yml
migrations/2026-03-28-000001_init/: down.sql  up.sql
migrations/2026-03-28-000002_commands/: down.sql  up.sql
src/: main.rs
src/controller/: api.rs
src/db/: mod.rs
src/service/: ai.rs
web/: index.html
