[package]
name = "codiff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
walkdir = "2.5"
