[package]
name = "codiff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
diesel = { version = "2.2", features = ["sqlite"] }
diesel_migrations = "2.2"
futures-util = "0.3"
fs2 = "0.4"
libsqlite3-sys = { version = "0.31", features = ["bundled"] }
notify = "8.2"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
walkdir = "2.5"
webbrowser = "1.0"
